--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "web-devtools",
+  "name": "my-bookmarks",
   "version": "1.0.0",
-  "description": "A list of resources I use（Perspective of F2E）",
+  "description": "my favorite collection",
   "main": "index.js",
   "scripts": {
     "dev": "vuepress dev docs",
@@ -10,19 +10,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yanyue404/web-devtools.git"
+    "url": "git+https://github.com/yanyue404/my-bookmarks.git"
   },
   "keywords": [
-    "awesome",
-    "studio",
+    "bookmarks",
     "front-end"
   ],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/yanyue404/web-devtools/issues"
+    "url": "https://github.com/yanyue404/my-bookmarks/issues"
   },
-  "homepage": "https://github.com/yanyue404/web-devtools#readme",
+  "homepage": "https://github.com/yanyue404/my-bookmarks#readme",
   "devDependencies": {
     "vuepress": "^1.8.2"
   }
