--- a/.github/workflows/vuepress-deploy.yml
+++ b/.github/workflows/vuepress-deploy.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@master
+      uses: yanyue404/my-bookmarks@master
 
     - name: vuepress-deploy
       uses: yanyue404/my-bookmarks@master
