--- a/.github/workflows/vuepress-deploy.yml
+++ b/.github/workflows/vuepress-deploy.yml
@@ -4,8 +4,8 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@master
+#     - name: Checkout
+#       uses: actions/checkout@master
 
     - name: vuepress-deploy
       uses: yanyue404/my-bookmarks@master
