--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/yanyue404/my-bookmarks#readme",
   "devDependencies": {
+    "rainbow-shared": "^0.5.4",
     "vuepress": "^1.8.2",
     "vuepress-plugin-fulltext-search": "^2.2.1"
   }
