--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "my favorite collection",
   "main": "index.js",
   "scripts": {
-    "dev": "vuepress dev docs",
+    "dev": "vuepress dev docs --temp .temp",
     "build": "vuepress build docs",
     "deploy": "bash deploy.sh"
   },
@@ -23,8 +23,8 @@
   },
   "homepage": "https://github.com/yanyue404/my-bookmarks#readme",
   "devDependencies": {
+    "@vuepress/plugin-search": "^2.0.0-beta.51",
     "rainbow-shared": "^0.5.4",
-    "vuepress": "^1.8.2",
-    "vuepress-plugin-fulltext-search": "^2.2.1"
+    "vuepress": "^2.0.0-beta.51"
   }
 }
